differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr69916.c-4.8.2-0.out.txt
pr69916.c: In function ‘main’:
pr69916.c:13:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int i = 0; i < 10; i++)
     ^
pr69916.c:13:5: note: use option -std=c99 or -std=gnu99 to compile your code
